--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: Academic Page
 navbar-links:
     #  About Me: "aboutme"
     Notes:
-        - Grad School: "_posts/grad-school"
+        - Grad School: "posts/grad-school"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
