--- a/_config.yml
+++ b/_config.yml
@@ -88,10 +88,9 @@ social-network-links:
 # Select which share links to show in posts
 share-links-active:
   twitter: true
-  facebook: false
+  facebook: true
   google: false
   linkedin: false
-  github: true
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
