--- a/_config.yml
+++ b/_config.yml
@@ -66,11 +66,11 @@ author:
 # You can reorder the items to define the link order.
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
-  rss: true
-  email: "wangalexc at gmail.com"
-#  facebook: daattali
+  rss: false
+  email: "wangalexc at gmail"
   github: w4ngatang
   twitter: w4ngatang
+#  facebook: daattali
 #  reddit: yourname
 #  google-plus: +DeanAttali
 #  linkedin: daattali
@@ -88,7 +88,7 @@ social-network-links:
 # Select which share links to show in posts
 share-links-active:
   twitter: true
-  facebook: true
+  facebook: false
   google: false
   linkedin: false
 
